re PR target/59222 (gcc.c-torture/compile/20050622-1.c ICEs at -O1 and above for aarch64-elf ILP32)

2014-02-27  Vladimir Makarov  <vmakarov@redhat.com>

	PR target/59222
	* lra.c (lra_emit_add): Check SUBREG too.

From-SVN: r208201